Added RESTful Services with OpenXDX PMIX Demo project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /OpenXDXDemo/nbproject/private/
 /OpenXDXDemo/build/
 /OpenXDXDemo/dist/
+/RESTfulOpenXDXPMIXDemo/nbproject/private/
+/RESTfulOpenXDXPMIXDemo/build/
+/RESTfulOpenXDXPMIXDemo/dist/
